# project-util

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  TODO.md  design-doc.pages  makefile  project.py  pyproject.toml  requirements-local.txt  setup.py
src/: example.py
src/artefact/: artefact.py
src/naming/: naming.py
src/project/: project.py
src/project_util/: constants.py
src/project_util/artefact/: artefact.py
src/project_util/blueprint/: blueprint.py  processor.py
src/project_util/naming/: naming.py
src/project_util/project/: project.py
src/project_util/services/: s3.py
src/tests/: test_project.py
